[package]
name = "rustuya-bridge"
version = "0.1.3"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
rustuya = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time", "fs", "signal"] }
zeromq = "0.4"
bytes = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
