[package]
name = "rustuya-bridge"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
rustuya = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time", "fs", "signal"] }
rumqttc = { version = "0.24", features = ["use-rustls"] }
bytes = "1.0"
regex = "1.11"
anyhow = "1.0"
thiserror = "2.0"
url = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
