[workspace]
members = ["python"]
# A bare `cargo build`/`test` at the root builds only the bridge — the python
# crate is a PyO3 extension (needs python headers) and is built via maturin, not
# cargo. `python` stays a member purely to inherit [workspace.package].version.
# The Dockerfile relies on this: it builds the workspace but must not try to
# compile the extension (it copies python/ only so the workspace manifest loads).
default-members = ["."]

# Single source of truth for the version, inherited by both the bridge crate
# and the pyrustuyabridge wheel via `version.workspace = true`. The PyPI
# package follows automatically (pyproject `dynamic = ["version"]` → maturin).
[workspace.package]
version = "0.3.0-rc.27"

[package]
name = "rustuyabridge"
version.workspace = true
edition = "2024"
license = "MIT"
description = "An MQTT bridge for managing Tuya devices via the Tuya Local API."
repository = "https://github.com/3735943886/rustuya-bridge"
readme = "README.md"
keywords = ["tuya", "mqtt", "iot", "bridge", "smart-home"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
rustuya = { version = "0.3.0-rc.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "time", "fs", "signal"] }
rumqttc = { version = "0.25", features = ["use-rustls"] }
bytes = "1.0"
regex = "1.11"
anyhow = "1.0"
thiserror = "2.0"
url = "2.5"
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
