[package]
name = "pyrustuyabridge"
version = "0.2.0-rc.24"
edition = "2024"
publish = false

[lib]
name = "pyrustuyabridge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1.49", features = ["rt-multi-thread"] }
tokio-util = "0.7"
anyhow = "1.0"
pyo3-log = "0.13"
log = "0.4"
rustuyabridge = { path = "../" }
serde_json = "1"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Maximize optimizations
panic = "abort"     # Remove panic unwinding
strip = true        # Strip symbols from binary
