[package]
name = "pyrustuyabridge"
version.workspace = true
edition = "2024"
publish = false

[lib]
name = "pyrustuyabridge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1.49", features = ["rt-multi-thread"] }
tokio-util = "0.7"
anyhow = "1.0"
pyo3-log = "0.13"
log = "0.4"
rustuyabridge = { path = "../" }
serde_json = "1"

# Build profile is defined once at the workspace root (../Cargo.toml).
# Cargo ignores `[profile.*]` in non-root members, so it must live there.
