[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustuyabridge"
dynamic = ["version"]
description = "Python bindings for rustuyabridge"
authors = [
    { name = "3735943886" }
]
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["tuya", "iot", "smart-home", "automation"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/3735943886/rustuya-bridge"
Repository = "https://github.com/3735943886/rustuya-bridge"

[tool.maturin]
python-source = "src"
module-name = "pyrustuyabridge"
features = ["pyo3/extension-module"]
exclude = ["target/*", "**/target/*"]
